# agentic-claims-poc

./: .env.example  .env.test.example  .gitignore  CLAUDE.md  README.md  _config.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: alembic.ini  settings.py  settings.yaml.template
backend/app/: main.py
backend/app/agents/: __init__.py  _shared.py  adjuster.py  adjuster_models.py  doc_parser.py  doc_parser_models.py  guardrail.py  guardrail_models.py  guardrail_rules.py  validator.py  validator_models.py
backend/app/api/: __init__.py  agents_test.py  audit.py  claims.py  health.py  human.py  pipeline.py  runs.py
backend/app/audit/: __init__.py  canonical.py  chain.py  event.py  verify.py  writer.py
backend/app/claims/: __init__.py  models.py  repository.py
backend/app/escalation/: __init__.py  models.py  policy.py  policy.yaml
backend/app/llm/: __init__.py  anthropic_provider.py  factory.py  mistral_provider.py  provider.py
backend/data/: __init__.py  index_policy.py  market_data.py  market_data.yaml  sample_policy.txt  seed_claims.py
backend/db/: __init__.py  connection.py
backend/tests/: conftest.py  test_adjuster.py  test_adjuster_prompts.py  test_agent_probe.py  test_agents_test_api.py  test_anonymisation.py  test_api_claims_runs.py  test_api_logger.py  test_api_pipeline.py  test_audit_api.py  test_audit_canonical.py  test_audit_chain.py  test_audit_persistence.py  test_audit_verify.py  test_audit_writer.py  test_claims_repository.py  test_db_isolation.py  test_demo_fixture.py  test_doc_parser.py  test_doc_parser_prompts.py  test_escalation_policy.py  test_guardrail.py  test_guardrail_prompts.py  test_health.py  test_human_decision_api.py  test_index_policy.py  test_llm_provider_anthropic.py  test_llm_provider_mistral.py  test_market_data.py  test_migration_0002.py  test_pipeline_event_bus.py  test_pipeline_orchestrator.py  test_pipeline_scenarios.py  test_prompt_loader.py  test_runs_repository.py  test_schema.py  test_seed_claims.py  test_settings.py  test_settings_phase1.py  test_settings_phase2.py  (+3 more)
diagrams/: 1-headline-agent-flow.mmd  2-rag-zoom.mmd  3-decoupling-event-flow.mmd  4-production-architecture.mmd  Architecture_Diagram.html  README.md
docs/: architecture-stack-reference.md  build-log.md  change-governance.md  design-decisions.md  dora-third-party-register.md  walkthrough.md
docs/prompts/: 01-phase-0-repository-scaffold-plan.md  01-phase-0-repository-scaffold-report.md  01-phase-0-repository-scaffold.md  02-phase-1-data-layer-plan.md  02-phase-1-data-layer-report.md  02-phase-1-data-layer.md  03-phase-2-llm-gateway-and-validator-plan.md  03-phase-2-llm-gateway-and-validator-report.md  03-phase-2-llm-gateway-and-validator.md  04-phase-3-remaining-agents-plan.md  04-phase-3-remaining-agents-report.md  04-phase-3-remaining-agents.md  05-phase-4-pipeline-orchestrator-plan.md  05-phase-4-pipeline-orchestrator-report.md  05-phase-4-pipeline-orchestrator.md  06-phase-5-decoupling-and-replay-plan.md  06-phase-5-decoupling-and-replay-report.md  06-phase-5-decoupling-and-replay.md  07-phase-6-frontend-polish-plan.md  07-phase-6-frontend-polish-report.md  07-phase-6-frontend-polish.md  08-phase-7-demo-polish-and-documentation-plan.md  08-phase-7-demo-polish-and-documentation-report.md  08-phase-7-demo-polish-and-documentation.md  09-phase-8-demo-polish-fixes-plan.md  09-phase-8-demo-polish-fixes-report.md  09-phase-8-demo-polish-fixes.md  10-phase-8.2-doc-parser-refactor-plan.md  10-phase-8.2-doc-parser-refactor-report.md  10-phase-8.2-doc-parser-refactor.md  11-phase-8.3-explainability-panel-fixes-plan.md  11-phase-8.3-explainability-panel-fixes-report.md  11-phase-8.3-explainability-panel-fixes.md  12-phase-8.4-audit-write-fix-plan.md  12-phase-8.4-audit-write-fix-report.md  12-phase-8.4-audit-write-fix.md  13-phase-8.5-test-isolation-fix-plan.md  13-phase-8.5-test-isolation-fix-report.md  13-phase-8.5-test-isolation-fix.md  README.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  setupTests.ts
infra/: azure-devops-pipeline.yml
scripts/: setup-dev-db.sh  verify-demo-scenarios.py
(+65 files in other folders)
