[project]
name = "agentic-claims-poc"
version = "0.8.4"
description = "Multi-agent agentic AI prototype for insurance claims processing."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "sentence-transformers>=3.0",
    "anthropic>=0.40",
    "mistralai>=1.5",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection marker is designed to be called in argument
# defaults; without this, B008 flags every endpoint. This allow-list does not
# relax B008 for any other call.
extend-immutable-calls = ["fastapi.Depends"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["backend"]

# Third-party libraries without bundled type stubs. Restricted to
# packages we use directly; not a blanket ignore.
[[tool.mypy.overrides]]
module = [
    "pgvector.*",
    "sentence_transformers",
    "transformers",
    "transformers.*",
    # mistralai 2.x does not ship a `py.typed` marker. Anthropic does.
    "mistralai",
    "mistralai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"
